--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:onClick="increaseScore"
             app:layout_column="0"
             app:layout_row="0"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView1"
@@ -36,7 +36,7 @@
             android:onClick="increaseScore"
             app:layout_column="1"
             app:layout_row="0"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -45,7 +45,7 @@
             android:onClick="increaseScore"
             app:layout_column="2"
             app:layout_row="0"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -54,7 +54,7 @@
             android:onClick="increaseScore"
             app:layout_column="3"
             app:layout_row="0"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView4"
@@ -63,7 +63,7 @@
             android:onClick="increaseScore"
             app:layout_column="0"
             app:layout_row="1"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView5"
@@ -72,7 +72,7 @@
             android:onClick="increaseScore"
             app:layout_column="1"
             app:layout_row="1"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView6"
@@ -81,7 +81,7 @@
             android:onClick="increaseScore"
             app:layout_column="2"
             app:layout_row="1"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView7"
@@ -90,7 +90,7 @@
             android:onClick="increaseScore"
             app:layout_column="3"
             app:layout_row="1"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView8"
@@ -99,7 +99,7 @@
             android:onClick="increaseScore"
             app:layout_column="0"
             app:layout_row="2"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView9"
@@ -108,7 +108,7 @@
             android:onClick="increaseScore"
             app:layout_column="1"
             app:layout_row="2"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView10"
@@ -117,7 +117,7 @@
             android:onClick="increaseScore"
             app:layout_column="2"
             app:layout_row="2"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView11"
@@ -126,7 +126,7 @@
             android:onClick="increaseScore"
             app:layout_column="3"
             app:layout_row="2"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView12"
@@ -135,7 +135,7 @@
             android:onClick="increaseScore"
             app:layout_column="0"
             app:layout_row="3"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView13"
@@ -144,7 +144,7 @@
             android:onClick="increaseScore"
             app:layout_column="1"
             app:layout_row="3"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView14"
@@ -153,7 +153,7 @@
             android:onClick="increaseScore"
             app:layout_column="2"
             app:layout_row="3"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
 
         <ImageView
             android:id="@+id/imageView15"
@@ -162,7 +162,7 @@
             android:onClick="increaseScore"
             app:layout_column="3"
             app:layout_row="3"
-            app:srcCompat="@drawable/fatfat" />
+            app:srcCompat="@drawable/karabuk" />
     </androidx.gridlayout.widget.GridLayout>
 
     <TextView
@@ -190,7 +190,22 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.211"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/txtBest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="40dp"
+        android:text="Best Score: 0"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtScore"
         app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
